--- a/ts-ecommercial/package.json
+++ b/ts-ecommercial/package.json
@@ -10,12 +10,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.6",
+    "@types/redux-persist": "^4.3.1",
+    "@types/styled-components": "^5.1.4",
     "axios": "^0.21.0",
     "firebase": "^8.1.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "redux": "^4.0.5",
